[DEV-80] 인기과목 초기 전체 조회 삭제 및 카테고리 재구성 (#352)
* refactor: 전제 인기과목 조회 제거로 삭제

* refactor: 카테고리 인기과목 조회 로직 수정

* test: 카테고리 테스트 로직 수정

* refactor: 카테고리 관련 조회 수정

* refactor: 성능 최적화

* refactor: 텍스트 박스로 수정

* refactor: 커서 id 적용 방식 수정

* test: 리팩토링 된 코드 테스트 적용

* test: anySet() 적용 수정

* test: 코드 컨벤션 수정

* test: 레거시 코드 수정

* test: 레거시 코드 수정

* refactor: 소나큐브 이슈 해결

* test: 테스트 커버리지 추가

* test: 테스트 커버리지 추가

* test: 테스트 커버리지 추가

* refactor: 사용하지 않는 import 정리

* test: partials 추가 테스트 구현

* test: .isZero()로 수정